2006-10-31  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c:	Refactored and renamed the routines
	* generic/tclCkalloc.c:	TclObjPrintf, TclFormatObj, and
	* generic/tclCmdAH.c:	TclFormatToErrorInfo to a new set of
	* generic/tclCmdIL.c:	routines TclAppendPrintfToObj,
	* generic/tclCmdMZ.c:	TclAppendFormatToObj, TclObjPrintf, and
	* generic/tclDictObj.c:	TclObjFormat, with the intent of making
	* generic/tclExecute.c:	the latter list, plus TclAppendLimitedToObj
	* generic/tclIORChan.c:	and TclAppendObjToErrorInfo, public via
	* generic/tclIOUtil.c:	a revised TIP 270.
	* generic/tclInt.h:
	* generic/tclMain.c:
	* generic/tclNamesp.c:
	* generic/tclParseExpr.c:
	* generic/tclPkg.c:
	* generic/tclProc.c:
	* generic/tclStringObj.c:
	* generic/tclTimer.c:
	* generic/tclUtil.c:
	* unix/tclUnixFCmd.c:

2006-10-31  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:
	* generic/tcl.h:
	* generic/tclInterp.c:
	* generic/tclNamesp.c: removing the flag bit TCL_EVAL_NOREWRITE,
	the last remnant of the callObjc/v fiasco. It is not needed, as it
	is now always set and checked or'ed with TCL_EVAL_INVOKE.
	
2006-10-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/rules.vc: Fix for bug #1582769 - options conflict with VC2003.

2006-10-31  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclBasic.c, generic/tclNamesp.c, generic/tclProc.c:
	* generic/tclInt.h: Removed the callObjc and callObjv fields from the
	Interp structure. They did not function correctly and made other parts
	of the core amazingly complex, resulting in a substantive change to
	[info level] behaviour. [Bug 1587618]
	* library/clock.tcl: Removed use of [info level 0] for calculating the
	command name as used by the user and replace with a literal. What's
	there now is sucky, but at least appears to be right to most users.
	* tests/namespace.test (namespace-42.7,namespace-47.1): Reverted
	changes to these tests.
	* tests/info.test (info-9.11,info-9.12): Added knownBug constraint