@@ -663,6 +663,10 @@ EXTERN int pthread_getattr_np _ANSI_ARGS_((pthread_t, pthread_attr_t *));
 #include <pwd.h>
 #include <grp.h>
 
+#ifndef MODULE_SCOPE
+#define MODULE_SCOPE extern
+#endif
+
 MODULE_SCOPE struct passwd*  TclpGetPwNam(const char *name);
 MODULE_SCOPE struct group*   TclpGetGrNam(const char *name);
 MODULE_SCOPE struct passwd*  TclpGetPwUid(uid_t uid);
